--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
-
-    <!--Permissions for internet-->
+    <!-- Permissions for internet -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -17,7 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BebeAppThatWorks"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ui.eventCreation.EventCreationActivity"
+            android:exported="false"
+            android:theme="@style/Theme.BebeAppThatWorks" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
