--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:theme="@style/Theme.BebeAppThatWorks"
         tools:targetApi="31">
         <activity
+            android:name=".Home"
+            android:exported="false"
+            android:theme="@style/Theme.BebeAppThatWorks" />
+        <activity
             android:name=".forgotPassword.EnterResetCode"
             android:exported="false" />
         <activity
