--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.BebeAppThatWorks"
         tools:targetApi="31">
         <activity
-            android:name=".Home"
+            android:name=".AttendeeActivity"
             android:exported="false"
             android:theme="@style/Theme.BebeAppThatWorks" />
         <activity
