--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
     <!-- Permissions for internet -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -14,7 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BebeAppThatWorks"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ui.register.RegisterOrganisationActivity"
+            android:exported="false" />
         <activity
             android:name=".Home"
             android:exported="false"
@@ -30,7 +33,7 @@
             android:exported="false"
             android:theme="@style/Theme.BebeAppThatWorks" />
         <activity
-            android:name=".ui.register.RegisterActivity"
+            android:name=".ui.register.RegisterAttendeeActivity"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
@@ -38,7 +41,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
