--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
     <!-- Permissions for internet -->
     <uses-feature
         android:name="android.hardware.camera"
@@ -20,7 +20,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BebeAppThatWorks"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".OrganiserActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.register.RegisterOrganisationActivity"
             android:exported="false" />
@@ -44,7 +47,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="UniVerse" >
+            android:label="UniVerse">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
