--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
         android:theme="@style/Theme.BebeAppThatWorks"
         tools:targetApi="31">
         <activity
+            android:name=".GuestActivty"
+            android:exported="false" />
+        <activity
+            android:name=".GuestActivity"
+            android:exported="false"
+            android:label="@string/title_activity_guest"
+            android:theme="@style/Theme.BebeAppThatWorks" />
+        <activity
             android:name=".OrganiserActivity"
             android:exported="false" />
         <activity
