--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,12 @@
         android:theme="@style/Theme.BebeAppThatWorks"
         tools:targetApi="31">
         <activity
+            android:name=".ui.SettingsAttendee"
+            android:exported="false" />
+        <activity
+            android:name=".SettingsOrganiser"
+            android:exported="false" />
+        <activity
             android:name=".OrganiserActivity"
             android:exported="false" />
         <activity
