--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:name=".forgotPassword.ForgotPasswordActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.eventCreation.EventCreationActivity"
+            android:name=".EditProfileFragment"
             android:exported="false"
             android:theme="@style/Theme.BebeAppThatWorks" />
         <activity
